[package]
name = "yurl"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "yurl"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
colored = "2.1.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
serde_yaml = "0.9.34"
tabled = "0.15.0"
chrono = "0.4"
ureq = { version = "2.9.7", features = ["json"] }
md5 = "0.7.0"
mime = "0.3"
mime_guess = "2.0"
rand = "0.8.5"
macros = { path = "./macros" }
